[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/NPC.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Background/spr_rally_0.png" type="Texture" id=2]
[ext_resource path="res://Resources/AnimatedSpeechBubble.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 77, 36.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 17.0074

[node name="NPC" type="Area2D"]
script = ExtResource( 1 )

[node name="LitteringTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
flip_h = true

[node name="Speech" parent="." instance=ExtResource( 3 )]
position = Vector2( 30, -32 )
scale = Vector2( 0.25, 0.25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, 0.5 )
shape = SubResource( 3 )

[node name="NPC" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC"]
position = Vector2( 5, 3 )
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_NPC_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_NPC_body_exited"]
[connection signal="timeout" from="LitteringTimer" to="." method="_on_LitteringTimer_timeout"]
